--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "llmclient": "^8.1.21",
     "mongoose": "^6.2.1",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1"
+    "ollama": "^0.5.1",
+    "ollama-node": "^0.1.28",
+    "socket.io": "^4.4.1",
+    "yarn": "^1.22.22"
   }
 }
