--- a/public/package.json
+++ b/public/package.json
@@ -16,6 +16,7 @@
     "react-p5": "^1.4.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^8.1.1",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
