--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "nodemon": "*",
+    "react-scripts": "^5.0.1"
+  },
+  "scripts": {
+    "start": "concurrently \"npm run --prefix ./server/ start\" \"npm run --prefix ./public start\""
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
