--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules
 .env
 server/public/*
+Documentation/images/copilot_image_1731837152007.jpeg
+Documentation/images/b35dbc72-b72d-49b2-8778-b5cbdfe68828.jpg
+Documentation/images/2013-02-10_11-02-32_593.jpg
+Documentation/images/copilot_image_1731836965200.jpeg
+Documentation/images/Dickson Family.png
+Documentation/images/copilot_image_1731845326123.jpeg
