--- a/public/package.json
+++ b/public/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "absorb": "^1.0.1",
     "axios": "^0.28.1",
     "buffer": "^6.0.3",
     "emoji-picker-react": "^3.5.1",
