--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Documentation/images/2013-02-10_11-02-32_593.jpg
 Documentation/images/copilot_image_1731836965200.jpeg
 Documentation/images/Dickson Family.png
 Documentation/images/copilot_image_1731845326123.jpeg
+Documentation/~$FamilyTree.pptx
