--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Documentation/images/copilot_image_1731836965200.jpeg
 Documentation/images/Dickson Family.png
 Documentation/images/copilot_image_1731845326123.jpeg
 Documentation/~$FamilyTree.pptx
+Documentation/dbViz/*
