--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.15",
     "ollama": "^0.5.1",
     "ollama-node": "^0.1.28",
+    "openai": "^4.78.1",
     "shelljs": "^0.8.5",
     "socket.io": "^4.4.1",
     "yarn": "^1.22.22"
