add structured output for prototype

--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "openai": "^4.78.1",
     "shelljs": "^0.8.5",
     "socket.io": "^4.4.1",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.1"
   }
 }
