--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Documentation/images/Dickson Family.png
 Documentation/images/copilot_image_1731845326123.jpeg
 Documentation/~$FamilyTree.pptx
 Documentation/dbViz/*
+.obsidian/core-plugins.json
+.obsidian/workspace.json
