--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL="mongodb://127.0.0.1:27017/chat"
+MONGO_URL="mongodb://127.0.0.1:27017/asburysreefbeta"
 AIUUID="666ae36b12096f7d9718397c"
